# Connect-4-MCTS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake_modules/: FindSFML.cmake
include/bot/: Bot.hpp  Human.hpp  Player.hpp  PlayerFactory.hpp
include/bot/MCTS/: GameState.hpp  MCTS.hpp  TreeNode.hpp
include/engine/: Engine.hpp
include/game/: Board.hpp  Color.hpp  Coords.hpp  Game.hpp
src/: Main.cpp
src/bot/: Bot.cpp  Human.cpp  Player.cpp  PlayerFactory.cpp
src/bot/MCTS/: GameState.cpp  MCTS.cpp  TreeNode.cpp
src/engine/: Engine.cpp
src/game/: Board.cpp  Coords.cpp  Game.cpp
